--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,17 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="assets/aes.js" type="text/javascript"></script>
+  <script src="assets/uuid4.js" type="text/javascript"></script>
+  <script src="assets/forge.min.js" type="text/javascript"></script>
+  <script src="assets/elliptic.js" type="text/javascript"></script>
+  <script src="assets/foobar.js" type="text/javascript"></script>
+  <script src="assets/adapter.js" type="text/javascript"></script>
+  <script src="assets/peer.js" type="text/javascript"></script>
+  <script src="assets/X25519.js" type="text/javascript"></script>
+  <script src="assets/biginteger.js" type="text/javascript"></script>
+  <script src="assets/base64.js" type="text/javascript"></script>
+  <script src="assets/shortid.js" type="text/javascript"></script>
 </head>
 
 <body>
