make groups and topics clickable, enhance routing UX

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Kintanti</title>
 
   <base href="/" />
 
@@ -11,22 +11,22 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="/assets/icon/favicon.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src="assets/aes.js" type="text/javascript"></script>
-  <script src="assets/uuid4.js" type="text/javascript"></script>
-  <script src="assets/forge.min.js" type="text/javascript"></script>
-  <script src="assets/elliptic.js" type="text/javascript"></script>
-  <script src="assets/foobar.js" type="text/javascript"></script>
-  <script src="assets/adapter.js" type="text/javascript"></script>
-  <script src="assets/peer.js" type="text/javascript"></script>
-  <script src="assets/X25519.js" type="text/javascript"></script>
-  <script src="assets/biginteger.js" type="text/javascript"></script>
-  <script src="assets/base64.js" type="text/javascript"></script>
-  <script src="assets/shortid.js" type="text/javascript"></script>
+  <script src="/assets/aes.js" type="text/javascript"></script>
+  <script src="/assets/uuid4.js" type="text/javascript"></script>
+  <script src="/assets/forge.min.js" type="text/javascript"></script>
+  <script src="/assets/elliptic.js" type="text/javascript"></script>
+  <script src="/assets/foobar.js" type="text/javascript"></script>
+  <script src="/assets/adapter.js" type="text/javascript"></script>
+  <script src="/assets/peer.js" type="text/javascript"></script>
+  <script src="/assets/X25519.js" type="text/javascript"></script>
+  <script src="/assets/biginteger.js" type="text/javascript"></script>
+  <script src="/assets/base64.js" type="text/javascript"></script>
+  <script src="/assets/shortid.js" type="text/javascript"></script>
 </head>
 
 <body>
