update for skynet support

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Kintanti</title>
 
-  <base href="/" />
+  <base href="." />
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root><a href="https://www.youtube.com/watch?v=HQjfhOqthv0" target="_blank"><h1>Loading Kintanti - May take several minutes...</h1></a></app-root>
 </body>
 
 </html>
